Added more styling and component structure

--- a/src/components/dateCard/dateCard.css
+++ b/src/components/dateCard/dateCard.css
@@ -1,6 +1,6 @@
-@use '../../styles/variables';
-
 .card {
   border: none;
   border-radius: 2rem 2rem 10rem 2rem;
 }
+
+/*# sourceMappingURL=dateCard.css.map */
