--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $primary-font-color: hsl(0, 0%, 8%);
 $purple-color: hsl(259, 100%, 65%);
 $red-color: hsl(0, 100%, 67%);
 $primary-background: hsl(0, 0%, 94%);
+$white-color: hsl(0, 0%, 100%);
+$grey-color: #716F6F;
 
 // Font
 $font-stack: PoppinsBold, sans-serif;
