--- a/src/components/dateInputForm/dateInputForm.css
+++ b/src/components/dateInputForm/dateInputForm.css
@@ -11,8 +11,8 @@ input[type=number] {
 }
 
 .btn {
-  width: 5rem;
-  height: 5rem;
+  width: 6rem;
+  height: 6rem;
   border-radius: 3rem;
   background-color: #854dff;
 }
@@ -21,7 +21,9 @@ input[type=number] {
 }
 
 .form-control {
-  width: 60%;
+  width: 90%;
+  height: 4rem;
+  font-size: 32px;
 }
 .form-control:focus {
   box-shadow: none;
@@ -30,6 +32,8 @@ input[type=number] {
 
 label {
   color: #716F6F;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=dateInputForm.css.map */
